--- a/Sandbox/Cargo.toml
+++ b/Sandbox/Cargo.toml
@@ -7,3 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+image = "0.23"
+winit = "0.25.0"
+cgmath = "0.18"
+env_logger = "0.8"
+log = "0.4"
+wgpu = "0.8"
+futures = "0.3"
