--- a/Sandbox/Cargo.toml
+++ b/Sandbox/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.8"
 log = "0.4"
 wgpu = "0.8"
 futures = "0.3"
+bytemuck = { version = "1.4", features = ["derive"] }
 
 [profile.dev]
 opt-level = 0
