--- a/Sandbox/Cargo.toml
+++ b/Sandbox/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 wgpu = "0.8"
 futures = "0.3"
 bytemuck = { version = "1.4", features = ["derive"] }
+anyhow = "1.0"
 
 [profile.dev]
 opt-level = 0
