--- a/Sandbox/Cargo.toml
+++ b/Sandbox/Cargo.toml
@@ -16,6 +16,12 @@ wgpu = "0.8"
 futures = "0.3"
 bytemuck = { version = "1.4", features = ["derive"] }
 anyhow = "1.0"
+tobj = "3.0"
+
+[build-dependencies]
+anyhow = "1.0"
+fs_extra = "1.2"
+glob = "0.3"
 
 [profile.dev]
 opt-level = 0
